Added Zack page, linking, styles

--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,16 @@
 
 <div id="response-message"></div>
 
+<footer class="footer text-center">
+    <div class="contact-info">
+        <p>Email: <a href="mailto:band@example.com">barzac@aol.com</a></p>
+        <p>Phone: +1 (540) 226-1604</p>
+    </div>
+    <div class="footer">
+        <p>&copy; 2024 Zachary Smith | Powered by <img src="images/aws-icon.png" alt="AWS Icon" width="40" height="40"> & <a href="http://www.arielleworld.com/jacoby" target="_blank"> Coby</a></p></p>
+    </div>  
+</footer>
+
 <script>
     function submitForm() {
         var name = $("#name").val();
