--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lora:wght@400;700&family=Pacifico&display=swap">
 </head>
 
 <body>
@@ -32,6 +33,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#meet-the-band">Band</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#listen">Listen</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#repertoire">Repertoire</a>
@@ -66,7 +70,7 @@
                         dedicated to making your event truly exceptional.
                     </p>
                 </div>
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/album/3O4uCYxtLTP60ZVRvBlNQQ?utm_source=generator" width="100%" height="200" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <div class="image-container"></div>
             </div>
         
             <div class="col-md-6">
@@ -74,22 +78,31 @@
                     <h3 class="text-purple">Gallery</h3>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="images/NLB.png" class="d-block w-100 fixed-gallery-image" alt="Image 1">
+                            <img src="images/RestonTC.png" class="d-block w-100 fixed-gallery-image" alt="Reston Town Center Show">
                         </div>
                         <div class="carousel-item">
-                            <img src="images/NLB_wedding.png" class="d-block w-100 fixed-gallery-image" alt="Image 2">
+                            <img src="images/RestonTC2.png" class="d-block w-100 fixed-gallery-image" alt="Reston Town Center #2">
                         </div>
                         <div class="carousel-item">
-                            <img src="images/mardigrasDPT.png" class="d-block w-100 fixed-gallery-image" alt="Image 3">
+                            <img src="images/NLB.png" class="d-block w-100 fixed-gallery-image" alt="New Line Brass">
                         </div>
                         <div class="carousel-item">
-                            <img src="images/washBrass.png" class="d-block w-100 fixed-gallery-image" alt="Image 4">
+                            <img src="images/NLB_wedding.png" class="d-block w-100 fixed-gallery-image" alt="Wedding Band">
                         </div>
                         <div class="carousel-item">
-                            <img src="images/Spartanburg001.png" class="d-block w-100 fixed-gallery-image" alt="Image 5">
+                            <img src="images/mardigrasDPT.png" class="d-block w-100 fixed-gallery-image" alt="Mardi Gras">
                         </div>
                         <div class="carousel-item">
-                            <img src="images/Spartanburg002.png" class="d-block w-100 fixed-gallery-image" alt="Image 6">
+                            <img src="images/ZackRestonTC.png" class="d-block w-100 fixed-gallery-image" alt="Reston Town Center #3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/washBrass.png" class="d-block w-100 fixed-gallery-image" alt="Washington Brass">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/Spartanburg001.png" class="d-block w-100 fixed-gallery-image" alt="Spartanburg">
+			            </div>
+                        <div class="carousel-item">
+                            <img src="images/Spartanburg002.png" class="d-block w-100 fixed-gallery-image" alt="Spartanburg #2">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#gallery" role="button" data-slide="prev">
@@ -115,11 +128,12 @@
             <!-- Zachary Smith's Card -->
             <div class="col-md-6">
                 <div class="section-card">
-                    <h3 class="text-purple">Zachary Smith</h3>
-                    <img src="images/zacksmith.jpg" alt="Zachary Smith" class="profile-img">
+                    <a href="https://www.mardigraskings.com/zack/index.html" target="_blank">
+    <img src="images/zacksmith.jpg" alt="Zachary Smith" class="profile-img hover-enlarge">
+</a><h3 class="text-purple">Zachary Smith</h3>
                     <div class="profile-info">
-                        <p>30+ years of performing on the East Coast. Award winning composer,
-                            arranger, jazz clinician, and songwriter. U. of North Texas trained trumpeter (and
+                        <p>30+ years performing on the East Coast. Award winning composer,
+                            arranger, jazz clinician, and songwriter. University of North Texas trained trumpeter (and
                             accordion, piano, vocals, harmonica, rubboard, etc.)</p>
                     </div>
                 </div>
@@ -131,12 +145,50 @@
                     <h4 class="text-purple">The Mardi Gras Kings</h3>
                     <p>(A partial list of cats who have played with the band)</p>
                     <ul style="list-style-type: none; padding: 0;">
-                        <li><strong>Guitar:</strong> Chuck Underwood, Shawn Purcell, Kent Hall, John Lee, Wayne Wilkinson</li>
-                        <li><strong>Bass:</strong> Larry Melton, Paul Henry, Dallas Smith, Andy Kochenour</li>
+                        <li><strong>Guitar:</strong> Chuck Underwood, Shawn Purcell, Ken Hall, John Lee, Wayne Wilkinson, Bruce Middle</li>
+                        <li><strong>Bass:</strong> Larry Melton, Paul Henry, Dallas Smith, Andy Kochenour, Dave Yohe, Pete Revell, John Dawson</li>
                         <li><strong>Drums:</strong> Byron McWilliams, Andy Hamburger, Kyle Smith, Gary Crockett, Toby Fairchild, Mike Flaherty</li>
-                        <li><strong>Horns:</strong> Dan Haverstock, Bruce Swaim, Daryl Brenzyl, Davison Smith, Tom Holtz, Jan Duga</li>
+                        <li><strong>Horns:</strong> Dan Haverstock, Bruce Swaim, Darryl Brenzel, Davison Smith, Tom Holtz, Jan Duga</li>
                     </ul>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container divider">
+        <hr class="dotted-divider"> <!-- Dotted line -->
+    </div>
+
+     <div id="listen" class="container two-column-layout">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="section-card">
+                    <h3 class="text-purple">Taste of NOLA</h3>
+                    <div class="audio-player">
+                        <audio id="audioPlayer" controls>
+                            <source src="sounds/EastCoastZydeco.mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                        <div class="audio-controls">
+                            <button onclick="playAudio()" class="btn btn-primary">Play</button>
+                            <button onclick="pauseAudio()" class="btn btn-secondary">Pause</button>
+                        </div>
+                    </div>
+                    <div class="playlist mt-3">
+                        <ol id="playlist">
+                            <li onclick="loadAudio('sounds/EastCoastZydeco.mp3')">East Coast Zydeco</li>
+                            <li onclick="loadAudio('sounds/JoeAverysPiece.mp3')">Joe Avery's Piece</li>
+                            <li onclick="loadAudio('sounds/Regardez.mp3')">Regardez</li>
+                            <li onclick="loadAudio('sounds/BourbonStreetParade.mp3')">Bourbon Street Parade</li>
+                            <li onclick="loadAudio('sounds/MyGirlJosephine.mp3')">My Girl Josephine</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Partial List of Cats Who Have Played with the Band -->
+            <div class="col-md-6">
+                    <iframe class="spotify-embed" src="https://open.spotify.com/embed/album/3O4uCYxtLTP60ZVRvBlNQQ?utm_source=generator" width="100%" height="355" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </div>
     </div>
@@ -331,7 +383,7 @@
     <div id="performances" class="container">
             <div class="performance-card">
                     <h5 class="card-title">Millennium Stage</h5>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/2k5MUdviyOg?si=1mEIjBu0Dc99sKdN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/2k5MUdviyOg?si=1mEIjBu0Dc99sKdN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
             </div>
     </div>   
@@ -340,16 +392,27 @@
         <hr class="dotted-divider"> <!-- Dotted line -->
     </div>
 
-    <div class="mt-4 facebook-icon-container">
-        <a href="https://www.facebook.com/profile.php?id=100054111555347&sk=about&locale=zh_HK" target="_blank" rel="noopener noreferrer">
-            <img src="images/facebook_social media_social_icon.png" alt="Facebook Icon" width="50" height="50">
-        </a>
+    <div class="row">
+    	<div class="mt-4 facebook-icon-container">
+        	<a href="https://www.facebook.com/profile.php?id=100054111555347&sk=about&locale=zh_HK" target="_blank" rel="noopener noreferrer">
+            	<img src="images/facebook_social media_social_icon.png" alt="Facebook Icon" width="50" height="50">
+            </a>
+    	</div>
+        <div class="mt-4 facebook-icon-container">
+            <a href="https://www.instagram.com/mardigraskings?igsh=MTNxdnZtNnE3YWxhZw==" target="_blank" rel="noopener noreferrer">
+                <img src="images/Instagram_icon.png" alt="Instagram icon" width="50" height="50">
+            </a>
+        </div>
     </div>
 
     <footer class="footer text-center">
+        <div class="contact-info">
+            <p>Email: barzac@aol.com</p>
+            <p>Phone: +1 (540) 226-1604</p>
+        </div>
         <div class="footer">
             <p>&copy; 2024 Zachary Smith | Powered by <img src="images/aws-icon.png" alt="AWS Icon" width="40" height="40"> & <a href="http://www.arielleworld.com/jacoby" target="_blank"> Coby</a></p></p>
-        </div>        
+        </div>  
     </footer>
 
 
@@ -362,6 +425,31 @@
             var content = document.getElementById(section + '-content');
             content.style.display = content.style.display === 'block' ? 'none' : 'block';
         }
+    </script>
+
+    <script>
+        function playAudio() {
+            var audio = document.getElementById('audioPlayer');
+            audio.play();
+        }
+
+        function pauseAudio() {
+            var audio = document.getElementById('audioPlayer');
+            audio.pause();
+        }
+
+        function loadAudio(src) {
+            var audio = document.getElementById('audioPlayer');
+            audio.src = src;
+            audio.play();
+        }
+
+        $(document).ready(function() {
+            $('#playlist li').on('click', function() {
+                $('#playlist li').removeClass('active');
+                $(this).addClass('active');
+            });
+        });
     </script>
 
 </body>
